[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Score.gd" type="Script" id=1]
[ext_resource path="res://Graphics/apple.png" type="Texture" id=2]
[ext_resource path="res://StackSansText-VariableFont_wght.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Graphics/trophy.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.290196, 0.458824, 0.176471, 1 )
corner_detail = 10

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 3 )

[node name="Score" type="Node2D" groups=[
"score_group",
]]
script = ExtResource( 1 )

[node name="Background" type="Panel" parent="."]
show_behind_parent = true
margin_top = 1.0
margin_right = 602.0
margin_bottom = 39.0
size_flags_horizontal = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TrophySprite" type="Sprite" parent="Background"]
position = Vector2( 112, 19 )
scale = Vector2( 0.06, 0.06 )
texture = ExtResource( 4 )

[node name="BestScoreText" type="Label" parent="Background"]
margin_left = 135.0
margin_top = 4.0
margin_right = 154.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreText" type="Label" parent="Background"]
margin_left = 43.0
margin_top = 4.0
margin_right = 61.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AppleSprite" type="Sprite" parent="Background"]
position = Vector2( 22, 17 )
scale = Vector2( 1.1, 1.05 )
texture = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="Background"]
margin_left = 445.0
margin_right = 522.0
margin_bottom = 39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Num1" type="Label" parent="Background/HBoxContainer"]
margin_top = 3.0
margin_right = 12.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Op" type="Label" parent="Background/HBoxContainer"]
margin_left = 16.0
margin_top = 3.0
margin_right = 31.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "+"

[node name="Num2" type="Label" parent="Background/HBoxContainer"]
margin_left = 35.0
margin_top = 3.0
margin_right = 47.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "1"

[node name="Equal" type="Label" parent="Background/HBoxContainer"]
margin_left = 51.0
margin_top = 3.0
margin_right = 66.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "="

[node name="QuestionMark" type="Label" parent="Background/HBoxContainer"]
margin_left = 70.0
margin_top = 3.0
margin_right = 84.0
margin_bottom = 36.0
custom_fonts/font = SubResource( 2 )
text = "?"
